Update to Chromium version 101.0.4951.0 (#982481)
Known issues:
- chrome: Some ceftests are failing due to bfcache same-site enabled by default
  (see issue #3301)

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -835,8 +835,7 @@ static_library("libcef_static") {
     "//base:base_static",
     "//base/third_party/dynamic_annotations",
     "//cc",
-    "//chrome:browser_dependencies",
-    "//chrome:child_dependencies",
+    "//chrome:dependencies",
     "//chrome:packed_resources",
     "//chrome:resources",
     "//chrome:strings",
