--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -539,5 +539,10 @@ patches = [
     # Remove DCHECK that triggers while loading DevTools resources.
     # https://bugs.chromium.org/p/chromium/issues/detail?id=1289230
     'name': 'blink_security_policy_1289230',
+  },
+  {
+    # Windows: Always use the root window as the owner for shell dialogs.
+    # https://bitbucket.org/chromiumembedded/cef/issues/3294
+    'name': 'win_shell_dialogs_3294',
   }
 ]
