Fix cursor change notification for OOP iframes (fixes issue #3308)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -124,6 +124,9 @@ patches = [
     # https://bitbucket.org/chromiumembedded/cef/issues/1565
     #
     # Add WebContentsObserver::OnFrameFocused.
+    #
+    # Add WebContentsObserver::RenderWidgetCreated.
+    # https://bitbucket.org/chromiumembedded/cef/issues/3308
     'name': 'web_contents_1257_1565',
   },
   {
