Use Chrome file dialogs on all platforms and runtimes (fixes issue #3314)
All file dialogs irrespective of source, platform and runtime will now be
routed through CefFileDialogManager and trigger CefDialogHandler callbacks
(see issue #3293).

Adds Chrome runtime support for CefBrowserHost::RunFileDialog and
CefDialogHandler callbacks.

Adds Alloy runtime support for internal GTK file and print dialogs on Linux
subject to the following limitations:

1. Internal GTK implementation:
   - Cannot be used with multi-threaded-message-loop because Chromium's
     internal GTK implementation is not thread-safe (does not use GDK threads).
   - Dialogs will not be modal to application windows when used with off-screen
     rendering due to lack of access to the client's top-level GtkWindow.
2. Cefclient CefDialogHandler implementation:
   - Cannot be used with Views because it requires a top-level GtkWindow.

Due to the above limitations no dialog implementation is currently provided for
Views + multi-threaded-message-loop on Linux. In cases where both
implementations are supported the cefclient version is now behind an optional
`--use-client-dialogs` command-line flag.

Expressly forbids multiple simultaneous file dialogs with the internal platform
implementation which uses modal dialogs. CefDialogHandler will still be notified
and can optionally handle each request without a modal dialog (see issue #3154).

Removes some RunFileDialog parameters that are not supported by the Chrome file
dialog implementation (selected_accept_filter parameter, cef_file_dialog_mode_t
overwrite/read-only flags).

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -202,6 +202,10 @@ patches = [
   {
     # Changes to support the Chrome runtime in CEF.
     # https://bitbucket.org/chromiumembedded/cef/issues/2969
+    #
+    # Fix fatal error: 'components/printing/common/print.mojom.h' file not found
+    # From chrome/browser/ui/browser_commands.cc via
+    # chrome/browser/printing/print_view_manager_common.h
     'name': 'chrome_browser_browser',
   },
   {
@@ -216,6 +220,14 @@ patches = [
     # chrome: Support custom handling of context menus.
     # https://bitbucket.org/chromiumembedded/cef/issues/2969
     'name': 'chrome_browser_context_menus',
+  },
+  {
+    # Support use of chrome dialogs with CEF runtimes.
+    # - Adds support for FileSelectHelper and SelectFileDialog interception.
+    # - Adds additional type filters for dialogs created via FileSelectHelper.
+    # - Adds support for chaining PrintingContextLinux callbacks.
+    # https://bitbucket.org/chromiumembedded/cef/issues/3314
+    'name': 'chrome_browser_dialogs',
   },
   {
     # chrome: Support override of ChromeMimeHandlerViewGuestDelegate.
@@ -242,15 +254,6 @@ patches = [
     # chrome: Fix assertion when clicking the incognito profile button.
     # https://bitbucket.org/chromiumembedded/cef/issues/2969
     'name': 'chrome_browser_profile_menu',
-  },
-  {
-    # Show the CEF Save As dialog.
-    # https://bitbucket.org/chromiumembedded/cef/issues/2613
-    #
-    # Fix fatal error: 'components/printing/common/print.mojom.h' file not found
-    # From chrome/browser/ui/browser_commands.cc via
-    # chrome/browser/printing/print_view_manager_common.h
-    'name': 'chrome_browser_net_export',
   },
   {
     # Support override of the User-Agent product component when NetworkService
