Update to Chromium version 102.0.4997.0 (#990845)
- Windows: SDK version 10.0.20348.0 is now required.
- MacOS: SDK version 12.3 (Xcode 13.3) is now required.
- Legacy swiftshader binaries (`swiftshader/*` on Win/Linux and
  `libswiftshader_*.dylib` on MacOS) have been removed (see issue #3176).

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -447,6 +447,8 @@ patches = [
     # which was removed in https://crrev.com/5f183d6636. We can't use
     # ScopedWebUIControllerFactoryRegistration because it pulls in GTest
     # dependencies.
+    #
+    # Add accessor for WebUIConfigMap::webui_controller_factory_.
     'name': 'browser_web_ui_controller_factory',
   },
   {
@@ -542,13 +544,18 @@ patches = [
     'name': 'win_sandbox_3210',
   },
   {
-    # Remove DCHECK that triggers while loading DevTools resources.
-    # https://bugs.chromium.org/p/chromium/issues/detail?id=1289230
-    'name': 'blink_security_policy_1289230',
-  },
-  {
     # Windows: Always use the root window as the owner for shell dialogs.
     # https://bitbucket.org/chromiumembedded/cef/issues/3294
     'name': 'win_shell_dialogs_3294',
+  },
+  {
+    # Linux: Fix duplicate symbol error due to bluez/metrics_recorder.cc.
+    # https://bugs.chromium.org/p/chromium/issues/detail?id=1319006
+    'name': 'linux_bluetooth_1319006',
+  },
+  {
+    # Fix xmlTextReaderReadOuterXml parsing error.
+    # https://gitlab.gnome.org/GNOME/libxml2/-/issues/371
+    'name': 'libxml_371',
   }
 ]
