Update to Chromium version 102.0.5005.0 (#992738)
Linux: 32-bit x86 builds are no longer supported (see issue #2676).

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -557,5 +557,10 @@ patches = [
     # Fix xmlTextReaderReadOuterXml parsing error.
     # https://gitlab.gnome.org/GNOME/libxml2/-/issues/371
     'name': 'libxml_371',
+  },
+  {
+    # Windows: Fix cef_sandbox compile error in hang_watcher.cc.
+    # https://bugs.chromium.org/p/chromium/issues/detail?id=1310011#c10
+    'name': 'base_hang_watcher_1310011',
   }
 ]
