alloy: Disable ProxyErrorClient callbacks when extensions are disabled (fixes issue #2830)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -235,7 +235,13 @@ patches = [
     'name': 'chrome_browser_extensions',
   },
   {
-    # Don't initialize ExtensionSystemFactory when extensions are disabled.
+    # alloy: Disable ProxyErrorClient callbacks when extensions are disabled.
+    # https://bitbucket.org/chromiumembedded/cef/issues/2830
+    'name': 'chrome_browser_net_proxy',
+  },
+  {
+    # alloy: Don't initialize ExtensionSystemFactory when extensions are
+    # disabled.
     # https://bitbucket.org/chromiumembedded/cef/issues/2852
     'name': 'chrome_browser_themes',
   },
