alloy: Use Views context menus on Windows/Linux (fixes issue #3330)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -177,7 +177,10 @@ patches = [
     # Expose callbacks for mouse/keyboard events that trigger menu switching.
     # Add accelerator display support to Label.
     # https://bitbucket.org/chromiumembedded/cef/issues/2102
-    'name': 'views_1749_2102',
+    #
+    # Route |parent_widget| to MenuHost for OSR context menu Widget creation.
+    # https://bitbucket.org/chromiumembedded/cef/issues/3330
+    'name': 'views_1749_2102_3330',
   },
   {
     # Support CEF changes in chrome/browser.
