--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -563,13 +563,9 @@ patches = [
     'name': 'linux_bluetooth_1319006',
   },
   {
-    # Fix xmlTextReaderReadOuterXml parsing error.
-    # https://gitlab.gnome.org/GNOME/libxml2/-/issues/371
-    'name': 'libxml_371',
-  },
-  {
-    # Windows: Fix cef_sandbox compile error in hang_watcher.cc.
-    # https://bugs.chromium.org/p/chromium/issues/detail?id=1310011#c10
-    'name': 'base_hang_watcher_1310011',
+    # Linux: Fix undefined symbol
+    # ApcOnboardingCoordinatorImpl::CreateOnboardingController
+    # https://crrev.com/101d5657f1
+    'name': 'chrome_browser_autofill_1322387',
   }
 ]
