Windows: Fix time_win.cc compile error with cef_sandbox

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -567,5 +567,10 @@ patches = [
     # ApcOnboardingCoordinatorImpl::CreateOnboardingController
     # https://crrev.com/101d5657f1
     'name': 'chrome_browser_autofill_1322387',
+  },
+  {
+    # Windows: Fix time_win.cc compile error with cef_sandbox.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/3650405
+    'name': 'base_time_3650405',
   }
 ]
