alloy: Use Chrome JS dialogs on Windows/Linux (fixes issue #3316)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -91,6 +91,7 @@ patches = [
     # https://bitbucket.org/chromiumembedded/cef/issues/1677
     # https://bitbucket.org/chromiumembedded/cef/issues/1679
     # https://bitbucket.org/chromiumembedded/cef/issues/1700
+    # https://bitbucket.org/chromiumembedded/cef/issues/3316
     #
     # Support creation of captionless windows with resizable borders.
     # https://bitbucket.org/chromiumembedded/cef/issues/1749
@@ -225,12 +226,21 @@ patches = [
     'name': 'chrome_browser_context_menus',
   },
   {
-    # Support use of chrome dialogs with CEF runtimes.
+    # Support use of chrome native dialogs with CEF runtimes.
     # - Adds support for FileSelectHelper and SelectFileDialog interception.
     # - Adds additional type filters for dialogs created via FileSelectHelper.
     # - Adds support for chaining PrintingContextLinux callbacks.
     # https://bitbucket.org/chromiumembedded/cef/issues/3314
-    'name': 'chrome_browser_dialogs',
+    'name': 'chrome_browser_dialogs_native',
+  },
+  {
+    # Support use of chrome Widget dialogs with CEF runtimes.
+    # - Add gfx::AcceleratedWidget dialog parent argument to
+    #   DialogDelegate::CreateDialogWidget for CEF windowless rendering.
+    # - Support nullptr gfx::NativeWindow/gfx::NativeView dialog parent for CEF
+    #   windowless rendering.
+    # https://bitbucket.org/chromiumembedded/cef/issues/3316
+    'name': 'chrome_browser_dialogs_widget',
   },
   {
     # chrome: Support override of ChromeMimeHandlerViewGuestDelegate.
