Update to Chromium version 104.0.5112.0 (#1012729)
- Mac: 10.13 is now the minimum required macOS version

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -163,8 +163,9 @@ patches = [
     # Modify views::View to extend SupportsUserData.
     # https://bitbucket.org/chromiumembedded/cef/issues/1749
     #
-    # Don't add TestDesktopScreenX11 dependency on Linux.
-    # Reverts ui_controls_factory_desktop_aurax11.cc changes from
+    # Don't add TestDesktopScreenOzone dependency on Linux.
+    # Reverts ui_controls_factory_desktop_aurax11.cc (now
+    # ui_controls_factory_desktop_aura_ozone.cc) changes from
     # https://codereview.chromium.org/2327623002
     #
     # Add InkDropHostView::ink_drop_mode method.
@@ -573,14 +574,9 @@ patches = [
     'name': 'linux_bluetooth_1319006',
   },
   {
-    # Linux: Fix undefined symbol
-    # ApcOnboardingCoordinatorImpl::CreateOnboardingController
-    # https://crrev.com/101d5657f1
-    'name': 'chrome_browser_autofill_1322387',
-  },
-  {
-    # Windows: Fix time_win.cc compile error with cef_sandbox.
-    # https://chromium-review.googlesource.com/c/chromium/src/+/3650405
-    'name': 'base_time_3650405',
+    # Wrap base::Value::{Dict,List}}:WriteIntoTrace() with correct #ifs.
+    # Fixes compile error with official cef_sandbox build on Windows.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/3703780
+    'name': 'base_values_3703780',
   }
 ]
