Windows: Fix time_win.cc compile error with cef_sandbox

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -578,5 +578,10 @@ patches = [
     # Fixes compile error with official cef_sandbox build on Windows.
     # https://chromium-review.googlesource.com/c/chromium/src/+/3703780
     'name': 'base_values_3703780',
+  },
+  {
+    # Windows: Fix time_win.cc compile error with cef_sandbox.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/3718022
+    'name': 'base_time_3718022',
   }
 ]
